# pln-protocol

./: .gitignore  DEMO_SCRIPT.md  DEPLOYMENT_NOTES.md  DESIGN_SYSTEM.md  install.sh  package-lock.json  package.json
contracts/: Anchor.toml
contracts/credit_market/src/: lib.rs
contracts/liquidity_router/src/: lib.rs
contracts/programs/credit_market/: Cargo.toml
contracts/programs/credit_market/src/: lib.rs
contracts/programs/reputation/: Cargo.toml
contracts/programs/transfer_hook/: Cargo.toml
contracts/reputation/src/: lib.rs
docs/: BLOCKERS.md  LINEAR_TASKS_SUMMARY.md  TASK_LOG.md  architecture_diagram.md  protocol-design.md
frontend/: .env.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ActivationSuccess.tsx  BuiltWithSection.tsx  CreditTierCard.tsx  Navbar.tsx  PLNActivateWizard.tsx  PLNLanding.tsx  RoutingFeed.tsx  StatsCard.tsx  TwoPathLanding.tsx  WalletErrorBoundary.tsx  WalletProvider.tsx
frontend/src/hooks/: usePLNPrograms.ts  useWalletSafe.ts
frontend/src/idl/: credit_market.json  liquidity_router.json  (+1 more)
keeper/: README.md  package.json
keeper/src/: monitor.ts
scripts/: create-usdc-mint.ts
sdk/atc-borrower/: SKILL.md
sdk/atc-lender/: SKILL.md
sdk/pln/: SKILL.md  package-lock.json  package.json
skills/pln/: SKILL.md  package-lock.json  package.json  tsconfig.json
video/: README.md  package-lock.json  package.json  tsconfig.json
video/src/: AppWindow.tsx  PLNDemo.tsx  PLNPromo.tsx  ParticleGrid.tsx  Root.tsx  SpringAnimation.tsx  Video.tsx
(+12 files in other folders)
