[package]
name = "credit_market"
version = "0.1.0"
description = "PLN Protocol Credit Market - Undercollateralized lending with liquidation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "credit_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
